@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-02T08:19:55Z",
+  "timestamp" : "2022-08-02T16:20:27Z",
   "count_outdated" : 426,
   "uniques_outdated" : 245,
-  "count" : 459,
+  "count" : 460,
   "uniques" : 263,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-08-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
